--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\KbaUnHoyo\\AppData\\Roaming\\NetBeans\\8.0.1\\build.properties
+user.properties.file=E:\\M\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
